2007-01-31  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-caption-example.c: Adding checkbutton to the caption
	examples to see how things are looking.

	* src/hildon-caption.c: Xan's fix for caption and checkbutton.

2007-01-31  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-color-chooser-dialog.c:
	* src/hildon-color-chooser.c: Adding some documentation.

2007-01-31  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* configure.ac:
	* pkgconfig/hildon.pc.in:
	* src/hildon-seekbar.c: Xan's fixes for new gtk compilation.

2007-01-29  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: More documentation fixes. 

2007-01-29  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/Makefile.am:
	* src/hildon-hvolumebar.c:
	* src/hildon-note.c:
	* src/hildon-number-editor.c:
	* src/hildon-program.c:
	* src/hildon-range-editor.c: Moving thesgml documentation to code.

2007-01-29  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/Makefile.am:
	* src/hildon-calendar-popup.c:
	* src/hildon-color-button.c:
	* src/hildon-color-chooser-dialog.h:
	* src/hildon-controlbar.c:
	* src/hildon-date-editor.c:
	* src/hildon-get-password-dialog.c:
	* src/hildon-login-dialog.c:
	* src/hildon-login-dialog.h:
	* src/hildon-note.c:
	* src/hildon-program.c:
	* src/hildon-sort-dialog.c:
	* src/hildon-time-editor.c:
	* src/hildon-time-picker.c:
	* src/hildon-vvolumebar.c:
	* src/hildon-weekday-picker.c:
	* src/hildon-window.c:
	* src/hildon-wizard-dialog.c: Moving the sgml documentation to code.

2007-01-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: Big documentation fix mess continued.

2007-01-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: Big documentation fix mess.

2007-01-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-sort-dialog.c:
	* src/hildon-sort-dialog.h:
	* src/hildon-time-editor.c: