@@ -1,3 +1,12 @@
+2007-02-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* doc/gtk-doc.make:
+	* doc/Makefile.am: Small adjustments to directory layout.
+
+	* examples/Makefile.am:
+	* examples/hildon-time-editor-example.c: A new example for time
+	editor.
+
 2007-01-31  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	* examples/hildon-caption-example.c: Adding checkbutton to the caption
